# qxqbotv3

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  smart_audit_report.md
.github/workflows/: ci.yml
al_rased/: .env.example  al_rased_data.db  main.py  requirements-dev.txt  requirements.txt  start_monitor.sh  start_monitor_daemon.sh
al_rased/core/: bot.py  cache.py  database.py
al_rased/services/: __init__.py
data/telethonSamplesv2/: _metadata.json  ads_labeled_samples_20260123.json  (+59 more)
scripts/: aggressive_learning.py  analyze_false_negatives.py  analyze_fp_deep.py  analyze_keywords.py  analyze_misclassifications.py  analyze_schema_split.py  apply_ad_policy.py  apply_expert_fixes.py  apply_manual_fixes.py  arabize_labels.py  audit_academic.py  audit_dataset.py  audit_medical.py  audit_normal.py  audit_remaining.py  audit_report_v2.json  auto_improve_model.py  autonomous_optimization.py  balance_and_diversify.py  balance_candidates.json  balance_dataset.py  boost_confidence.py  calibrate_thresholds.py  clean_and_enhance.py  clean_dataset.py  clean_unethical.py  comprehensive_audit.py  comprehensive_cleanup.py  create_unethical_category.py  deep_mining.py  detect_and_fix_mislabels.py  enhance_and_review.py  extract_for_review.py  extract_samples_v2.py  final_audit_arabic.py  final_check.py  fix_academic_issues.py  fix_all_issues.py  fix_based_on_model.py  fix_cross_category.py  (+43 more)
tests/: conftest.py  test_basic.py  test_database.py  test_detection.py  test_features_full.py
web_review/: server.py
(+40 files in other folders)
